--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  
   "dependencies": {
     "framer-motion": "^4.1.17",
     "gsap": "^3.7.1",
@@ -17,8 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-locomotive-scroll": "^0.1.8",
-    "styled-components": "^5.3.1",
-    "twin.macro": "^2.7.0"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
@@ -26,6 +26,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.9"
+    "tailwindcss": "^2.2.9",
+    "twin.macro": "^2.7.0"
   }
 }
